// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers counterReducer should handle DECREMENT_COUNTER 1`] = `
Object {
  "counter": NaN,
}
`;

exports[`reducers counterReducer should handle INCREMENT_COUNTER 1`] = `
Object {
  "counter": NaN,
}
`;

exports[`reducers counterReducer should handle initial state 1`] = `
Object {
  "counter": 0,
}
`;

exports[`reducers counterReducer should handle unknown action type 1`] = `1`;
